<resources>
    <!-- App name -->
    <string name="app_name">Student Toolbox</string>


    <!-- Main Activity sections names-->
    <string name="section_name_courses">Courses</string>
    <string name="section_name_schedule">Schedule</string>
    <string name="section_name_notepad">Notepad</string>
    <string name="section_name_recorder">Recorder</string>
    <string name="section_name_grades">Grades</string>
    <string name="section_name_gpacalc">GPA calculator</string>
    <string name="section_name_timer">Timer</string>
    <string name="section_name_chat">Chat</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="moodle_default_url">moodle.nu.edu.kz</string>
    <string name="prompt_moodle_url">Moodle url</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_settings">Settings</string>


    <!-- Strings related to settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_moodle_enabled_key">moodle_enable_key</string>
    <string name="pref_moodle_enabled_on">Enabled</string>
    <string name="pref_moodle_enabled_off">Disabled</string>
    <string name="pref_moodle_enabled_label">Enable moodle</string>
    <string name="aciton_settings">Settings</string>


    <!-- Strings related to Courses section -->
    <string name="section_expansion_current_courses">Current courses</string>
    <string name="section_expanstion_courses_previous">Previous courses</string>
    <string name="action_sync">Synchronize</string>

</resources>
